--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="a_la_francaise.css" />
         <link href="fontawesome-free-5.15.3-web/css/all.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,9 +18,11 @@
             <header>
 
                 <nav>
-                    <i class="fas fa-arrow-left" aria-hidden="true"></i>
                     <div id="logo">
-                        <img src="./Maquettes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood" />
+                        <a href="./index.html">
+                        <i class="fas fa-arrow-left" aria-hidden="true"></i>
+                        <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood" />
+                        </a>
                     </div> 
                 </nav>
 
@@ -31,6 +33,7 @@
             <div class="picture_food"></div>
 
             <section>
+                <div class="main_section">
 
                 <div id="title_icon">
                     <h1>À la française</h1>
@@ -47,7 +50,7 @@
                     <div class="starter">
 
                         <div class="title_menu">
-                            <h2>Entrées</h2>
+                            <h2>ENTRÉES</h2>
                         </div>
 
                         <div class="menu_details">
@@ -56,7 +59,7 @@
                                 <h3>Tartare de poulpe acidulé</h3>
                                 <div class="text_menu">
                                     <p>Aux zestes d'orange</p>
-                                    <p>25€</p>
+                                    <p class="price">25€</p>
                                 </div>
                                 <div class="choice_ok">
                                     <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -70,7 +73,7 @@
                                 <h3>Velouté de légumes d'antan</h3>
                                 <div class="text_menu">
                                     <p>Carotte, panais, topinambour</p>
-                                    <p>35€</p>
+                                    <p class="price">35€</p>
                                 </div>
                                 <div class="choice_ok">
                                     <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -84,7 +87,7 @@
                                 <h3>Soupe à l'oignon</h3>
                                 <div class="text_menu">
                                     <p>Revisitée</p>
-                                    <p>20€</p>
+                                    <p class="price">20€</p>
                                 </div>
                                 <div class="choice_ok">
                                     <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -97,7 +100,7 @@
                     <div class="dish">
 
                         <div class="title_menu">
-                            <h2>Plats</h2>
+                            <h2>PLATS</h2>
                         </div>
 
                         <div class="menu_details">
@@ -106,7 +109,7 @@
                                 <h3>Coquilles Saint-Jacques</h3>
                                 <div class="text_menu">
                                     <p>Accompagnées d'une purée de panais</p>
-                                    <p>40€</p>
+                                    <p class="price">40€</p>
                                 </div>
                                 <div class="choice_ok">
                                     <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -120,7 +123,7 @@
                                 <h3>Magret de canard</h3>
                                 <div class="text_menu">
                                     <p>Et parmentier de pommes de terre</p>
-                                    <p>35€</p>
+                                    <p class="price">35€</p>
                                 </div>
                                 <div class="choice_ok">
                                     <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -134,7 +137,7 @@
                                 <h3>Pigeonneau d’Ille-et-Vilaine</h3>
                                 <div class="text_menu">
                                     <p>Sur son lit de gnocchis aux légumes</p>
-                                    <p>44€</p>
+                                    <p class="price">44€</p>
                                 </div>
                                 <div class="choice_ok">
                                     <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -147,7 +150,7 @@
                     <div class="dessert">
 
                         <div class="title_menu">
-                            <h2>Desserts</h2>
+                            <h2>DESSERTS</h2>
                         </div>
 
                         <div class="menu_details">
@@ -156,7 +159,7 @@
                                 <h3>Pétales de violettes glacés</h3>
                                 <div class="text_menu">
                                     <p>Et purée de noisettes</p>
-                                    <p>18€</p>
+                                    <p class="price">18€</p>
                                 </div>
                                 <div class="choice_ok">
                                     <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -170,7 +173,7 @@
                                 <h3>Fondant au chocolat</h3>
                                 <div class="text_menu">
                                     <p>Revisité</p>
-                                    <p>22€</p>
+                                    <p class="price">22€</p>
                                 </div>
                                 <div class="choice_ok">
                                     <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -184,7 +187,7 @@
                                 <h3>Millefeuille croustillant</h3>
                                 <div class="text_menu">
                                     <p>Myrtilles et pâte d’amande</p>
-                                    <p>23€</p>
+                                    <p class="price">23€</p>
                                 </div>
                                 <div class="choice_ok">
                                     <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -195,6 +198,12 @@
                     </div>
 
                 </div>
+
+                    <div class="container_button">
+                        <a class="button_order" href="">Commander</a>
+                    </div>
+                    
+                </div>       
 
             </section>
 
@@ -207,10 +216,10 @@
             <div id="container_footer">    
                 <div class="list_footer">
                     <h2>ohmyfood</h2>
-                    <a href="#"><i class="fas fa-ustensils"></i>Proposer un restaurant</a>
+                    <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
                     <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
                     <a href="#">Mentions légales</a>
-                    <a href="#">Contact</a>
+                    <a href="no_reply@ohmyfood.com">Contact</a>
                 </div>
             </div>
         
