--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="la_note_enchantee.css" />
         <link href="fontawesome-free-5.15.3-web/css/all.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,9 +18,11 @@
         <header>
 
             <nav>
-                <i class="fas fa-arrow-left" aria-hidden="true"></i>
                 <div id="logo">
-                    <img src="./Maquettes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood" />
+                    <a href="./index.html">
+                    <i class="fas fa-arrow-left" aria-hidden="true"></i>
+                    <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood" />
+                    </a>
                 </div> 
             </nav>
 
@@ -31,6 +33,7 @@
         <div class="picture_food"></div>
 
         <section>
+            <div class="main_section">
 
             <div id="title_icon">
                 <h1>La note enchantée</h1>
@@ -47,7 +50,7 @@
                 <div class="starter">
 
                     <div class="title_menu">
-                        <h2>Entrées</h2>
+                        <h2>ENTRÉES</h2>
                     </div>
 
                     <div class="menu_details">
@@ -56,7 +59,7 @@
                             <h3>Ravioles de foie gras</h3>
                             <div class="text_menu">
                                 <p>Accompagnés de leur crème à la truffe</p>
-                                <p>25€</p>
+                                <p class="price">25€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -70,7 +73,7 @@
                             <h3>Caviar osciètre</h3>
                             <div class="text_menu">
                                 <p>Sur blini à la farine de blé noir</p>
-                                <p>35€</p>
+                                <p class="price">35€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -84,7 +87,7 @@
                             <h3>Homard et espuma de potiron</h3>
                             <div class="text_menu">
                                 <p>Mariné aux zestes d'orange</p>
-                                <p>20€</p>
+                                <p class="price">20€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -98,7 +101,7 @@
                             <h3>Foie gras de canard cuit entier</h3>
                             <div class="text_menu">
                                 <p>Confiture de figue et pain toasté</p>
-                                <p>35€</p>
+                                <p class="price">35€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -111,7 +114,7 @@
                 <div class="dish">
 
                     <div class="title_menu">
-                        <h2>Plats</h2>
+                        <h2>PLATS</h2>
                     </div>
 
                     <div class="menu_details">
@@ -120,7 +123,7 @@
                             <h3>Noix de coquilles Saint-Jacques</h3>
                             <div class="text_menu">
                                 <p>Sur lit de purée de céleri-rave</p>
-                                <p>40€</p>
+                                <p class="price">40€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -134,7 +137,7 @@
                             <h3>Langoustine poêlée</h3>
                             <div class="text_menu">
                                 <p>Purée de patate douce</p>
-                                <p>35€</p>
+                                <p class="price">35€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -148,7 +151,7 @@
                             <h3>Mijoté de queue de boeuf</h3>
                             <div class="text_menu">
                                 <p>Et riz sauvage aux zestes de citron</p>
-                                <p>44€</p>
+                                <p class="price">44€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -161,7 +164,7 @@
                 <div class="dessert">
 
                     <div class="title_menu">
-                        <h2>Desserts</h2>
+                        <h2>DESSERTS</h2>
                     </div>
 
                     <div class="menu_details">
@@ -170,7 +173,7 @@
                             <h3>Macaron noisette et chocolat</h3>
                             <div class="text_menu">
                                 <p>Glace au caramel brun et sel de Guérande</p>
-                                <p>18€</p>
+                                <p class="price">18€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -184,7 +187,7 @@
                             <h3>Baba au rhum revisité</h3>
                             <div class="text_menu">
                                 <p>Avec son coulis de citron</p>
-                                <p>22€</p>
+                                <p class="price">22€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -198,7 +201,7 @@
                             <h3>Tarte au citron meringuée</h3>
                             <div class="text_menu">
                                 <p>Déstructurée</p>
-                                <p>23€</p>
+                                <p class="price">23€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -206,6 +209,12 @@
                         </div>
                     </div>
 
+                </div>
+
+            </div>
+
+                <div class="container_button">
+                    <a class="button_order" href="">Commander</a>
                 </div>
 
             </div>
@@ -221,10 +230,10 @@
         <div id="container_footer">    
             <div class="list_footer">
                 <h2>ohmyfood</h2>
-                <a href="#"><i class="fas fa-ustensils"></i>Proposer un restaurant</a>
+                <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
                 <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
                 <a href="#">Mentions légales</a>
-                <a href="#">Contact</a>
+                <a href="no_reply@ohmyfood.com">Contact</a>
             </div>
         </div>
     
