--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="la_palette_du_gout.css" />
         <link href="fontawesome-free-5.15.3-web/css/all.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,9 +18,11 @@
         <header>
 
             <nav>
-                <i class="fas fa-arrow-left" aria-hidden="true"></i>
                 <div id="logo">
-                    <img src="./Maquettes Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood" />
+                    <a href="./index.html">
+                    <i class="fas fa-arrow-left" aria-hidden="true"></i>
+                    <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood" />
+                    </a>
                 </div> 
             </nav>
 
@@ -31,6 +33,7 @@
         <div class="picture_food"></div>
 
         <section>
+            <div class="main_section">
 
             <div id="title_icon">
                 <h1>La palette du goût</h1>
@@ -47,7 +50,7 @@
                 <div class="starter">
 
                     <div class="title_menu">
-                        <h2>Entrées</h2>
+                        <h2>ENTRÉES</h2>
                     </div>
 
                     <div class="menu_details">
@@ -56,7 +59,7 @@
                             <h3>Fricassée d'escargot</h3>
                             <div class="text_menu">
                                 <p>Au piment d'Espelette</p>
-                                <p>25€</p>
+                                <p class="price">25€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -70,7 +73,7 @@
                             <h3>Foie gras de canard mi-cuit</h3>
                             <div class="text_menu">
                                 <p>Et ses copeaux de truffe noire</p>
-                                <p>35€</p>
+                                <p class="price">35€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -84,7 +87,7 @@
                             <h3>Oeuf au plat</h3>
                             <div class="text_menu">
                                 <p>Assaisonné à la truffe sur lit de caviar</p>
-                                <p>20€</p>
+                                <p class="price">20€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -97,7 +100,7 @@
                 <div class="dish">
 
                     <div class="title_menu">
-                        <h2>Plats</h2>
+                        <h2>PLATS</h2>
                     </div>
 
                     <div class="menu_details">
@@ -106,7 +109,7 @@
                             <h3>Filet de boeuf aux herbes</h3>
                             <div class="text_menu">
                                 <p>Accompagné de sa ribambelle de légumes</p>
-                                <p>40€</p>
+                                <p class="price">40€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -120,7 +123,7 @@
                             <h3>Parmentier de queue de boeuf</h3>
                             <div class="text_menu">
                                 <p>À la truffe noire sur sa purée de panais</p>
-                                <p>35€</p>
+                                <p class="price">35€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -134,7 +137,7 @@
                             <h3>Filet de turbot</h3>
                             <div class="text_menu">
                                 <p>Aux agrumes</p>
-                                <p>44€</p>
+                                <p class="price">44€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -147,7 +150,7 @@
                 <div class="dessert">
 
                     <div class="title_menu">
-                        <h2>Desserts</h2>
+                        <h2>DESSERTS</h2>
                     </div>
 
                     <div class="menu_details">
@@ -156,7 +159,7 @@
                             <h3>Paris-Brest</h3>
                             <div class="text_menu">
                                 <p>Revisité</p>
-                                <p>18€</p>
+                                <p class="price">18€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -170,7 +173,7 @@
                             <h3>Macaron au chocolat d'exception</h3>
                             <div class="text_menu">
                                 <p>Et glace à la vanille de Madagascar</p>
-                                <p>22€</p>
+                                <p class="price">22€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -184,7 +187,7 @@
                             <h3>Mousse au chocolat</h3>
                             <div class="text_menu">
                                 <p>Au piment d'Espelette et à la truffe noire</p>
-                                <p>23€</p>
+                                <p class="price">23€</p>
                             </div>
                             <div class="choice_ok">
                                 <i class="fas fa-check-circle" aria-hidden="true"></i>
@@ -195,6 +198,12 @@
                 </div>
 
             </div>
+
+                <div class="container_button">
+                    <a class="button_order" href="">Commander</a>
+                </div>
+            
+            </div>      
 
         </section>
 
@@ -207,10 +216,10 @@
         <div id="container_footer">    
             <div class="list_footer">
                 <h2>ohmyfood</h2>
-                <a href="#"><i class="fas fa-ustensils"></i>Proposer un restaurant</a>
+                <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
                 <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
                 <a href="#">Mentions légales</a>
-                <a href="#">Contact</a>
+                <a href="no_reply@ohmyfood.com">Contact</a>
             </div>
         </div>
     
