Rajout des étiquettes Nouveau sur page accueil

--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
 
                     <div id="container_restaurants">
                         <div class="restaurant">
+                            <div class="new">
+                                <span>Nouveau</span>
+                            </div>
                             <a href="./la_palette_du_gout.html">
                             <div id="la_palette_du_gout"></div>
                             <div class="block_description">
@@ -113,6 +116,9 @@
                         </div>
 
                         <div class="restaurant">
+                            <div class="new">
+                                <span>Nouveau</span>
+                            </div>
                             <a href="./la_note_enchantee.html">
                             <div id="la_note_enchantee"></div>
                             <div class="block_description">
