--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -219,7 +219,7 @@
                 <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
                 <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
                 <a href="#">Mentions légales</a>
-                <a href="no_reply@ohmyfood.com">Contact</a>
+                <a href="mailto:no_reply@ohmyfood.com">Contact</a>
             </div>
         </div>
     
