Ajout du loading spinner

--- a/index.html
+++ b/index.html
@@ -17,6 +17,22 @@
     </head>
     
     <body>
+
+            <div class="loader">
+                <div class="dots">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <span>Chargement...</span>
+            </div>
+
       	    <header>
                 
                 <div id="logo">
@@ -108,6 +124,7 @@
                                 <h3>La palette du goût</h3>
                                 <p>Ménilmontant</p>
                             </div>
+                            </a>    
                             <div class="heart">
                                 <label class="clic_heart" >
                                     <input type="checkbox" name="like">
@@ -115,7 +132,6 @@
                                 </label>
                             </div>
                             </div>
-                            </a>
                         </div>
 
                         <div class="restaurant">
@@ -129,6 +145,7 @@
                                 <h3>La note enchantée</h3>
                                 <p>Charonne</p>
                             </div>
+                            </a>
                             <div class="heart">
                                 <label class="clic_heart" >
                                     <input type="checkbox" name="like">
@@ -136,7 +153,6 @@
                                 </label>
                             </div>
                             </div>
-                            </a>
                         </div>
 
                         <div class="restaurant">
@@ -147,6 +163,7 @@
                                 <h3>À la française</h3>
                                 <p>Cité Rouge</p>
                             </div>
+                            </a>
                             <div class="heart">
                                 <label class="clic_heart" >
                                     <input type="checkbox" name="like">
@@ -154,7 +171,6 @@
                                 </label>
                             </div>
                             </div>
-                            </a>
                         </div>
 
                         <div class="restaurant">
@@ -165,6 +181,7 @@
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
                             </div>
+                            </a>
                             <div class="heart">
                                 <label class="clic_heart" >
                                     <input type="checkbox" name="like">
@@ -172,7 +189,6 @@
                                 </label>
                             </div>
                             </div>
-                            </a>
                         </div>
                     </div>
                 </section>
