--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="le_delice_des_sens.css" />
+        <link rel="stylesheet" href="menu.css" />
         <link href="fontawesome-free-5.15.3-web/css/all.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,7 @@
 
         <main>
 
-        <div class="picture_food"></div>
+        <div class="picture_food__le_delice"></div>
 
         <section>
             <div class="main_section">
