ajout hover index, responsive sur menu, bordure checkbox

--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="menu.css" />
+        <link rel="stylesheet" href="style.css" />
         <link href="fontawesome-free-5.15.3-web/css/all.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,8 +21,8 @@
                     <div id="logo">
                         <a href="./index.html">
                         <i class="fas fa-arrow-left" aria-hidden="true"></i>
-                        <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood" />
                         </a>
+                        <h1 class="main_logo">Ohmyfood</h1>
                     </div> 
                 </nav>
 
@@ -32,11 +32,11 @@
 
             <div class="picture_food__a_la_francaise"></div>
 
-            <section>
+            <section class="menu_page">
                 <div class="main_section">
 
                 <div id="title_icon">
-                    <h1>À la française</h1>
+                    <h2 class="title_name_restau">À la française</h2>
                     <div class="heart">
                         <label class="clic_heart" >
                             <input type="checkbox" name="like">
@@ -50,13 +50,13 @@
                     <div class="starter">
 
                         <div class="title_menu">
-                            <h2>ENTRÉES</h2>
+                            <h3 class="title_menu_part">ENTRÉES</h3>
                         </div>
 
                         <div class="menu_details">
                             <input type="checkbox" name="like">
                             <div class="details">
-                                <h3>Tartare de poulpe acidulé</h3>
+                                <h4>Tartare de poulpe acidulé</h4>
                                 <div class="text_menu">
                                     <p>Aux zestes d'orange</p>
                                     <p class="price">25€</p>
@@ -70,7 +70,7 @@
                         <div class="menu_details">
                             <input type="checkbox" name="like">
                             <div class="details">
-                                <h3>Velouté de légumes d'antan</h3>
+                                <h4>Velouté de légumes d'antan</h4>
                                 <div class="text_menu">
                                     <p>Carotte, panais, topinambour</p>
                                     <p class="price">35€</p>
@@ -84,7 +84,7 @@
                         <div class="menu_details">
                             <input type="checkbox" name="like">
                             <div class="details">
-                                <h3>Soupe à l'oignon</h3>
+                                <h4>Soupe à l'oignon</h4>
                                 <div class="text_menu">
                                     <p>Revisitée</p>
                                     <p class="price">20€</p>
@@ -100,13 +100,13 @@
                     <div class="dish">
 
                         <div class="title_menu">
-                            <h2>PLATS</h2>
+                            <h3 class="title_menu_part">PLATS</h3>
                         </div>
 
                         <div class="menu_details">
                             <input type="checkbox" name="like">
                             <div class="details">
-                                <h3>Coquilles Saint-Jacques</h3>
+                                <h4>Coquilles Saint-Jacques</h4>
                                 <div class="text_menu">
                                     <p>Accompagnées d'une purée de panais</p>
                                     <p class="price">40€</p>
@@ -120,7 +120,7 @@
                         <div class="menu_details">
                             <input type="checkbox" name="like">
                             <div class="details">
-                                <h3>Magret de canard</h3>
+                                <h4>Magret de canard</h4>
                                 <div class="text_menu">
                                     <p>Et parmentier de pommes de terre</p>
                                     <p class="price">35€</p>
@@ -134,7 +134,7 @@
                         <div class="menu_details">
                             <input type="checkbox" name="like">
                             <div class="details">
-                                <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                                <h4>Pigeonneau d’Ille-et-Vilaine</h4>
                                 <div class="text_menu">
                                     <p>Sur son lit de gnocchis aux légumes</p>
                                     <p class="price">44€</p>
@@ -150,13 +150,13 @@
                     <div class="dessert">
 
                         <div class="title_menu">
-                            <h2>DESSERTS</h2>
+                            <h3 class="title_menu_part">DESSERTS</h3>
                         </div>
 
                         <div class="menu_details">
                             <input type="checkbox" name="like">
                             <div class="details">
-                                <h3>Pétales de violettes glacés</h3>
+                                <h4>Pétales de violettes glacés</h4>
                                 <div class="text_menu">
                                     <p>Et purée de noisettes</p>
                                     <p class="price">18€</p>
@@ -170,7 +170,7 @@
                         <div class="menu_details">
                             <input type="checkbox" name="like">
                             <div class="details">
-                                <h3>Fondant au chocolat</h3>
+                                <h4>Fondant au chocolat</h4>
                                 <div class="text_menu">
                                     <p>Revisité</p>
                                     <p class="price">22€</p>
@@ -184,7 +184,7 @@
                         <div class="menu_details">
                             <input type="checkbox" name="like">
                             <div class="details">
-                                <h3>Millefeuille croustillant</h3>
+                                <h4>Millefeuille croustillant</h4>
                                 <div class="text_menu">
                                     <p>Myrtilles et pâte d’amande</p>
                                     <p class="price">23€</p>
@@ -215,7 +215,7 @@
 
             <div id="container_footer">    
                 <div class="list_footer">
-                    <h2>ohmyfood</h2>
+                    <h5>ohmyfood</h5>
                     <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
                     <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
                     <a href="#">Mentions légales</a>
