--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       	    <header>
                 
                 <div id="logo">
-                    <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood" />
+                    <h1 class="main_logo">Ohmyfood</h1>
                 </div> 
                 
             </header>
@@ -54,9 +54,9 @@
                 <section class="first_container">
 
                     <div class="content_container">
-                    <h1>Réservez le menu qui vous convient</h1>
+                    <h2 class="top_title">Réservez le menu qui vous convient</h2>
                     <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
-                    <div class="container_button">
+                    <div class="first_button">
                         <a class="button_explore" href="#restaurants">Explorer nos restaurants</a>
                     </div>
                     </div>
@@ -68,7 +68,7 @@
                 <section id="functioning">
 
                     <div class="functioning_container">
-                    <h2>Fonctionnement</h2>
+                    <h3 class="title_section">Fonctionnement</h3>
 
                     <div class="list_button_functioning">
                         <div class="functioning_card">
@@ -109,7 +109,7 @@
 
                 <section id="restaurants">
 
-                    <h2>Restaurants</h2>
+                    <h3 class="title_section">Restaurants</h3>
 
                     <div id="container_restaurants">
                         <div class="restaurant">
@@ -122,12 +122,12 @@
                             <div class="block_description">
                             <div class="restau_description">
                                 <a href="./la_palette_du_gout.html">
-                                <h3>La palette du goût</h3>
+                                <h4 class="title_card_index">La palette du goût</h4>
                                 <p>Ménilmontant</p>
                                 </a>
                             </div>  
-                            <div class="heart">
-                                <label class="clic_heart" >
+                            <div class="index_heart">
+                                <label class="clic_heart1" >
                                     <input type="checkbox" name="like">
                                     <i class="fas fa-heart"></i>
                                 </label>
@@ -145,12 +145,12 @@
                             <div class="block_description">
                             <div class="restau_description">
                                 <a href="./la_note_enchantee.html">
-                                <h3>La note enchantée</h3>
+                                <h4 class="title_card_index">La note enchantée</h4>
                                 <p>Charonne</p>
                                 </a>
                             </div>
-                            <div class="heart">
-                                <label class="clic_heart" >
+                            <div class="index_heart">
+                                <label class="clic_heart1" >
                                     <input type="checkbox" name="like">
                                     <i class="fas fa-heart"></i>
                                 </label>
@@ -165,12 +165,12 @@
                             <div class="block_description">
                             <div class="restau_description">
                                 <a href="./a_la_francaise.html">
-                                <h3>À la française</h3>
+                                <h4 class="title_card_index">À la française</h4>
                                 <p>Cité Rouge</p>
                                 </a>
                             </div>
-                            <div class="heart">
-                                <label class="clic_heart" >
+                            <div class="index_heart">
+                                <label class="clic_heart1" >
                                     <input type="checkbox" name="like">
                                     <i class="fas fa-heart"></i>
                                 </label>
@@ -185,12 +185,12 @@
                             <div class="block_description">
                             <div class="restau_description">
                                 <a href="./le_delice_des_sens.html">
-                                <h3>Le délice des sens</h3>
+                                <h4 class="title_card_index">Le délice des sens</h4>
                                 <p>Folie-Méricourt</p>
                                 </a>
                             </div>
-                            <div class="heart">
-                                <label class="clic_heart" >
+                            <div class="index_heart">
+                                <label class="clic_heart1" >
                                     <input type="checkbox" name="like">
                                     <i class="fas fa-heart"></i>
                                 </label>
@@ -208,7 +208,7 @@
 
                 <div id="container_footer">    
                     <div class="list_footer">
-                        <h2>ohmyfood</h2>
+                        <h5>ohmyfood</h5>
                         <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
                         <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
                         <a href="#">Mentions légales</a>
