--- a/la_note_enchantee.html
+++ b/la_note_enchantee.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="menu.css" />
+        <link rel="stylesheet" href="style.css" />
         <link href="fontawesome-free-5.15.3-web/css/all.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
                     <a href="./index.html">
                     <i class="fas fa-arrow-left" aria-hidden="true"></i>
                     </a>
-                    <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood" />
+                    <h1 class="main_logo">Ohmyfood</h1>
                 </div> 
             </nav>
 
@@ -32,11 +32,11 @@
 
         <div class="picture_food__la_note"></div>
 
-        <section>
+        <section class="menu_page">
             <div class="main_section">
 
             <div id="title_icon">
-                <h1>La note enchantée</h1>
+                <h2 class="title_name_restau">La note enchantée</h2>
                 <div class="heart">
                     <label class="clic_heart" >
                         <input type="checkbox" name="like">
@@ -50,13 +50,13 @@
                 <div class="starter">
 
                     <div class="title_menu">
-                        <h2>ENTRÉES</h2>
+                        <h3 class="title_menu_part">ENTRÉES</h3>
                     </div>
 
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Ravioles de foie gras</h3>
+                            <h4>Ravioles de foie gras</h4>
                             <div class="text_menu">
                                 <p>Accompagnés de leur crème à la truffe</p>
                                 <p class="price">25€</p>
@@ -70,7 +70,7 @@
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Caviar osciètre</h3>
+                            <h4>Caviar osciètre</h4>
                             <div class="text_menu">
                                 <p>Sur blini à la farine de blé noir</p>
                                 <p class="price">35€</p>
@@ -84,7 +84,7 @@
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Homard et espuma de potiron</h3>
+                            <h4>Homard et espuma de potiron</h4>
                             <div class="text_menu">
                                 <p>Mariné aux zestes d'orange</p>
                                 <p class="price">20€</p>
@@ -98,7 +98,7 @@
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Foie gras de canard cuit entier</h3>
+                            <h4>Foie gras de canard cuit entier</h4>
                             <div class="text_menu">
                                 <p>Confiture de figue et pain toasté</p>
                                 <p class="price">35€</p>
@@ -114,13 +114,13 @@
                 <div class="dish">
 
                     <div class="title_menu">
-                        <h2>PLATS</h2>
+                        <h3 class="title_menu_part">PLATS</h3>
                     </div>
 
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Noix de coquilles Saint-Jacques</h3>
+                            <h4>Noix de coquilles Saint-Jacques</h4>
                             <div class="text_menu">
                                 <p>Sur lit de purée de céleri-rave</p>
                                 <p class="price">40€</p>
@@ -134,7 +134,7 @@
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Langoustine poêlée</h3>
+                            <h4>Langoustine poêlée</h4>
                             <div class="text_menu">
                                 <p>Purée de patate douce</p>
                                 <p class="price">35€</p>
@@ -148,7 +148,7 @@
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Mijoté de queue de boeuf</h3>
+                            <h4>Mijoté de queue de boeuf</h4>
                             <div class="text_menu">
                                 <p>Et riz sauvage aux zestes de citron</p>
                                 <p class="price">44€</p>
@@ -164,13 +164,13 @@
                 <div class="dessert">
 
                     <div class="title_menu">
-                        <h2>DESSERTS</h2>
+                        <h3 class="title_menu_part">DESSERTS</h3>
                     </div>
 
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Macaron noisette et chocolat</h3>
+                            <h4>Macaron noisette et chocolat</h4>
                             <div class="text_menu">
                                 <p>Glace au caramel brun et sel de Guérande</p>
                                 <p class="price">18€</p>
@@ -184,7 +184,7 @@
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Baba au rhum revisité</h3>
+                            <h4>Baba au rhum revisité</h4>
                             <div class="text_menu">
                                 <p>Avec son coulis de citron</p>
                                 <p class="price">22€</p>
@@ -198,7 +198,7 @@
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Tarte au citron meringuée</h3>
+                            <h4>Tarte au citron meringuée</h4>
                             <div class="text_menu">
                                 <p>Déstructurée</p>
                                 <p class="price">23€</p>
@@ -229,7 +229,7 @@
 
         <div id="container_footer">    
             <div class="list_footer">
-                <h2>ohmyfood</h2>
+                <h5>ohmyfood</h5>
                 <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
                 <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
                 <a href="#">Mentions légales</a>
