--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="menu.css" />
+        <link rel="stylesheet" href="style.css" />
         <link href="fontawesome-free-5.15.3-web/css/all.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,8 +21,8 @@
                 <div id="logo">
                     <a href="./index.html">
                     <i class="fas fa-arrow-left" aria-hidden="true"></i>
-                    <img src="./Maquettes_Ohmyfood/images/logo/ohmyfood@2x.svg" alt="Logo de Ohmyfood" />
                     </a>
+                    <h1 class="main_logo">Ohmyfood</h1>
                 </div> 
             </nav>
 
@@ -32,11 +32,11 @@
 
         <div class="picture_food__la_palette"></div>
 
-        <section>
+        <section class="menu_page">
             <div class="main_section">
 
             <div id="title_icon">
-                <h1>La palette du goût</h1>
+                <h2 class="title_name_restau">La palette du goût</h2>
                 <div class="heart">
                     <label class="clic_heart" >
                         <input type="checkbox" name="like">
@@ -50,13 +50,13 @@
                 <div class="starter">
 
                     <div class="title_menu">
-                        <h2>ENTRÉES</h2>
+                        <h3 class="title_menu_part">ENTRÉES</h3>
                     </div>
 
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Fricassée d'escargot</h3>
+                            <h4>Fricassée d'escargot</h4>
                             <div class="text_menu">
                                 <p>Au piment d'Espelette</p>
                                 <p class="price">25€</p>
@@ -70,7 +70,7 @@
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Foie gras de canard mi-cuit</h3>
+                            <h4>Foie gras de canard mi-cuit</h4>
                             <div class="text_menu">
                                 <p>Et ses copeaux de truffe noire</p>
                                 <p class="price">35€</p>
@@ -84,7 +84,7 @@
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Oeuf au plat</h3>
+                            <h4>Oeuf au plat</h4>
                             <div class="text_menu">
                                 <p>Assaisonné à la truffe sur lit de caviar</p>
                                 <p class="price">20€</p>
@@ -100,13 +100,13 @@
                 <div class="dish">
 
                     <div class="title_menu">
-                        <h2>PLATS</h2>
+                        <h3 class="title_menu_part">PLATS</h3>
                     </div>
 
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Filet de boeuf aux herbes</h3>
+                            <h4>Filet de boeuf aux herbes</h4>
                             <div class="text_menu">
                                 <p>Accompagné de sa ribambelle de légumes</p>
                                 <p class="price">40€</p>
@@ -120,7 +120,7 @@
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Parmentier de queue de boeuf</h3>
+                            <h4>Parmentier de queue de boeuf</h4>
                             <div class="text_menu">
                                 <p>À la truffe noire sur sa purée de panais</p>
                                 <p class="price">35€</p>
@@ -134,7 +134,7 @@
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Filet de turbot</h3>
+                            <h4>Filet de turbot</h4>
                             <div class="text_menu">
                                 <p>Aux agrumes</p>
                                 <p class="price">44€</p>
@@ -150,13 +150,13 @@
                 <div class="dessert">
 
                     <div class="title_menu">
-                        <h2>DESSERTS</h2>
+                        <h3 class="title_menu_part">DESSERTS</h3>
                     </div>
 
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Paris-Brest</h3>
+                            <h4>Paris-Brest</h4>
                             <div class="text_menu">
                                 <p>Revisité</p>
                                 <p class="price">18€</p>
@@ -170,7 +170,7 @@
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Macaron au chocolat d'exception</h3>
+                            <h4>Macaron au chocolat d'exception</h4>
                             <div class="text_menu">
                                 <p>Et glace à la vanille de Madagascar</p>
                                 <p class="price">22€</p>
@@ -184,7 +184,7 @@
                     <div class="menu_details">
                         <input type="checkbox" name="like">
                         <div class="details">
-                            <h3>Mousse au chocolat</h3>
+                            <h4>Mousse au chocolat</h4>
                             <div class="text_menu">
                                 <p>Au piment d'Espelette et à la truffe noire</p>
                                 <p class="price">23€</p>
@@ -215,7 +215,7 @@
 
         <div id="container_footer">    
             <div class="list_footer">
-                <h2>ohmyfood</h2>
+                <h5>ohmyfood</h5>
                 <a href="#"><i class="fas fa-utensils"></i>Proposer un restaurant</a>
                 <a href="#"><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
                 <a href="#">Mentions légales</a>
